// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultsToolbar matches snapshot with no selected transactions 1`] = `
<div
  className="MuiToolbar-root-6 MuiToolbar-regular-8 MuiToolbar-gutters-7 TableToolbar-root-1"
>
  <div
    className="TableToolbar-title-5"
  >
    <div>
      <h6
        className="MuiTypography-root-10 MuiTypography-h6-27"
      >
        Title
      </h6>
      <span
        className="MuiTypography-root-10 MuiTypography-caption-20"
      >
        subTitle
      </span>
    </div>
  </div>
  <div
    className="TableToolbar-spacer-3"
  />
  <div
    className="TableToolbar-actions-4"
  >
    <label
      className="MuiFormControlLabel-root-46"
    >
      <span
        className="MuiSwitch-root-52"
      >
        <span
          className="MuiButtonBase-root-71 MuiIconButton-root-65 MuiPrivateSwitchBase-root-61 MuiSwitch-switchBase-55 MuiSwitch-colorSecondary-58"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-70"
          >
            <span
              className="MuiSwitch-icon-53"
            />
            <input
              checked={false}
              className="MuiPrivateSwitchBase-input-64"
              onChange={[Function]}
              type="checkbox"
              value="showOnlyErrors"
            />
          </span>
          <span
            className="MuiTouchRipple-root-74"
          />
        </span>
        <span
          className="MuiSwitch-bar-60"
        />
      </span>
      <span
        className="MuiTypography-root-10 MuiTypography-body1-19 MuiFormControlLabel-label-51"
      >
        Show only errors
      </span>
    </label>
  </div>
</div>
`;

exports[`ResultsToolbar matches snapshot with some selected transactions 1`] = `
<div
  className="MuiToolbar-root-6 MuiToolbar-regular-8 MuiToolbar-gutters-7 TableToolbar-root-1 TableToolbar-highlight-2"
>
  <div
    className="TableToolbar-title-5"
  >
    <h6
      className="MuiTypography-root-10 MuiTypography-subtitle1-28 MuiTypography-colorInherit-39"
    >
      2
      selected
    </h6>
  </div>
  <div
    className="TableToolbar-spacer-3"
  />
  <div
    className="TableToolbar-actions-4"
  >
    <label
      className="MuiFormControlLabel-root-46"
    >
      <span
        className="MuiSwitch-root-52"
      >
        <span
          className="MuiButtonBase-root-71 MuiIconButton-root-65 MuiPrivateSwitchBase-root-61 MuiSwitch-switchBase-55 MuiSwitch-colorSecondary-58"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-70"
          >
            <span
              className="MuiSwitch-icon-53"
            />
            <input
              checked={false}
              className="MuiPrivateSwitchBase-input-64"
              onChange={[Function]}
              type="checkbox"
              value="showOnlyErrors"
            />
          </span>
          <span
            className="MuiTouchRipple-root-74"
          />
        </span>
        <span
          className="MuiSwitch-bar-60"
        />
      </span>
      <span
        className="MuiTypography-root-10 MuiTypography-body1-19 MuiFormControlLabel-label-51"
      >
        Show only errors
      </span>
    </label>
  </div>
</div>
`;
